started configuring maven-surefire